recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:17: error: not found: value y
      recule(y:Double)
             ^Tree:23: error: not found: value y
      return tree(x,y,angle,shrink)
                    ^